# WCtoolkit

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  asan.log.118847  asan.log.69044
examples/: examples.c  json_parser.c  json_parser.h  leetcode.c  package.json  parse.h  projects.md
include/: Queue.h  Stack.h  String.h  arena.h  bit_vector.h  common.h  fast_math.h  gen_vector.h  hashmap.h  hashset.h  helpers.h  iter.h  map_setup.h  matrix.h  new_str.h  random.h  wc_errno.h  wc_helpers.h  wc_iter.h  wc_macros.h
single_header/: Queue_single.h  Stack_single.h  String_single.h  arena_single.h  bit_vector_single.h  common_single.h  fast_math_single.h  gen_vector_single.h  hashmap_single.h  hashset_single.h  helpers_single.h  map_setup_single.h  matrix_generic_single.h  matrix_single.h  random_single.h  wc_errno_single.h  wc_helpers_single.h  wc_macros.h  wc_macros_single.h
src/: Queue.c  Stack.c  String.c  arena.c  bit_vector.c  fast_math.c  gen_vector.c  hashmap.c  hashset.c  main.c  matrix.c  new_str.c  random.c  wc_errno.c
tests/: arena_test.c  bit_vector_test.c  complex_test.c  fast_math_test.c  gen_vector_test.c  hashmap_test.c  hashset_test.c  helpers.h  matrix_test.c  matrix_test.h  random_test.c  random_test.h  single_header_tests.h  speed_test.c  stack_queue_test.c  string_test.c  test_main.c  wc_macros.h  wc_test.h
tests/speed_tests/: String_speed.c  arena_speed.c  gen_vector_speed.c  hashmap_speed.c  hashset_speed.c  matrix_speed.c  wc_speed_test.h
tools/: make_single_header.py
